BB-16094: Long words German edition break the page layout - fix upload field

--- a/src/Oro/Bundle/AttachmentBundle/Resources/public/css/scss/attachment.scss
+++ b/src/Oro/Bundle/AttachmentBundle/Resources/public/css/scss/attachment.scss
@@ -52,10 +52,13 @@
         }
 
         .action {
+            width: auto;
             border: none;
             background: none;
             color: $link-color;
             cursor: pointer;
+            text-overflow: clip;
+            overflow: visible;
         }
 
         .active .action {
