--- a/src/Oro/Bundle/EntityBundle/Resources/public/css/scss/desktop/entity-fallback.scss
+++ b/src/Oro/Bundle/EntityBundle/Resources/public/css/scss/desktop/entity-fallback.scss
@@ -15,7 +15,7 @@
 
         &__line {
             max-width: 75%;
-            min-width: 25%;
+            min-width: 75%;
             flex-grow: 1;
             margin-top: 0;
         }
