--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/variables/form-variables.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/variables/form-variables.scss
@@ -53,6 +53,8 @@ $uploader-action-box-sizing: $input-box-sizing !default;
 $uploader-filename-width: auto !default;
 $uploader-filename-inner-offset: 0 $content-padding-small 0 $content-padding-small !default;
 
+$uploader-action-width: 90px !default;
+
 $uploader-hover-border-color: $input-focus-border-color !default;
 $uploader-hover-cursor: pointer !default;
 $uploader-hover-action-border-left-color: $input-focus-border-color !default;
